tests/neg/phantom-trait-1.scala

object Boo extends Phantom {
  override val assume: this.Nothing = super.assume // error
}
